// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`add experience 1`] = `
{
  "created_at": Any<String>,
  "description": "Test",
  "end_at": null,
  "id": Any<String>,
  "org_id": Any<String>,
  "skills": null,
  "start_at": Any<String>,
  "title": "Test",
  "user_id": Any<String>,
}
`;

exports[`add experience 2`] = `
{
  "created_at": Any<String>,
  "description": "Test",
  "end_at": null,
  "id": Any<String>,
  "org_id": Any<String>,
  "skills": null,
  "start_at": Any<String>,
  "title": "Test",
  "user_id": Any<String>,
}
`;

exports[`add language 1`] = `
{
  "created_at": Any<String>,
  "id": Any<String>,
  "level": "NATIVE",
  "name": "FA",
  "user_id": Any<String>,
}
`;

exports[`add language 2`] = `
{
  "created_at": Any<String>,
  "id": Any<String>,
  "level": "NATIVE",
  "name": "FA",
  "user_id": Any<String>,
}
`;

exports[`delete user 1`] = `
{
  "deleted_at": Any<Object>,
  "id": Any<String>,
  "reason": "TEST",
  "registered_at": Any<Object>,
  "user_id": Any<String>,
  "username": "test_username",
}
`;

exports[`login 1`] = `
{
  "error": ""email" must be a valid email",
}
`;

exports[`profile 1`] = `
{
  "address": null,
  "avatar": null,
  "bio": null,
  "city": null,
  "country": null,
  "cover_image": null,
  "created_at": Any<String>,
  "experiences": [
    {
      "description": "Test",
      "end_at": null,
      "id": Any<String>,
      "org": {
        "address": "address",
        "bio": "test",
        "city": "Tokyo",
        "country": "JP",
        "cover_image": null,
        "created_at": Any<String>,
        "created_by": Any<String>,
        "culture": "test",
        "description": "test",
        "email": "test@socious.io",
        "followers": 1,
        "followings": 0,
        "geoname_id": null,
        "id": Any<String>,
        "image": null,
        "impact_points": 0,
        "mission": "test",
        "mobile_country_code": null,
        "name": "test ORG",
        "other_party_id": null,
        "other_party_title": null,
        "other_party_url": null,
        "phone": "9379911",
        "search_tsv": Any<String>,
        "shortname": Any<String>,
        "social_causes": [
          "SOCIAL",
          "HEALTH",
        ],
        "status": "ACTIVE",
        "type": "COOP",
        "updated_at": Any<String>,
        "verified_impact": false,
        "wallet_address": null,
        "website": "http://test.com",
      },
      "skills": null,
      "start_at": "2022-10-16T13:32:30.211",
      "title": "Test",
    },
  ],
  "first_name": "test_name",
  "followers": 0,
  "followings": 2,
  "geoname_id": null,
  "id": Any<String>,
  "impact_points": 0,
  "languages": [
    {
      "id": Any<String>,
      "level": "NATIVE",
      "name": "FA",
    },
  ],
  "last_name": "last_name",
  "mission": null,
  "mobile_country_code": null,
  "phone": null,
  "proofspace_connect_id": null,
  "reported": false,
  "skills": null,
  "social_causes": null,
  "username": "test_username",
  "wallet_address": null,
}
`;

exports[`profile 2`] = `
{
  "address": null,
  "avatar": null,
  "bio": null,
  "city": null,
  "country": null,
  "cover_image": null,
  "created_at": Any<String>,
  "experiences": [
    {
      "description": "Test",
      "end_at": null,
      "id": Any<String>,
      "org": {
        "address": "address",
        "bio": "test",
        "city": "Tokyo",
        "country": "JP",
        "cover_image": null,
        "created_at": Any<String>,
        "created_by": Any<String>,
        "culture": "test",
        "description": "test",
        "email": "test@socious.io",
        "followers": 1,
        "followings": 0,
        "geoname_id": null,
        "id": Any<String>,
        "image": null,
        "impact_points": 0,
        "mission": "test",
        "mobile_country_code": null,
        "name": "test ORG",
        "other_party_id": null,
        "other_party_title": null,
        "other_party_url": null,
        "phone": "9379911",
        "search_tsv": Any<String>,
        "shortname": Any<String>,
        "social_causes": [
          "SOCIAL",
          "HEALTH",
        ],
        "status": "ACTIVE",
        "type": "COOP",
        "updated_at": Any<String>,
        "verified_impact": false,
        "wallet_address": null,
        "website": "http://test.com",
      },
      "skills": null,
      "start_at": "2022-10-16T13:32:30.211",
      "title": "Test",
    },
  ],
  "first_name": "test_name_2",
  "followers": 0,
  "followings": 0,
  "geoname_id": null,
  "id": Any<String>,
  "impact_points": 0,
  "languages": [
    {
      "id": Any<String>,
      "level": "NATIVE",
      "name": "FA",
    },
  ],
  "last_name": "last_name_2",
  "mission": null,
  "mobile_country_code": null,
  "phone": null,
  "proofspace_connect_id": null,
  "reported": false,
  "skills": null,
  "social_causes": null,
  "username": "test_username_2",
  "wallet_address": null,
}
`;

exports[`profile by username 1`] = `
{
  "address": null,
  "avatar": null,
  "bio": null,
  "city": null,
  "country": null,
  "cover_image": null,
  "created_at": Any<String>,
  "experiences": [
    {
      "description": "Test",
      "end_at": null,
      "id": Any<String>,
      "org": {
        "address": "address",
        "bio": "test",
        "city": "Tokyo",
        "country": "JP",
        "cover_image": null,
        "created_at": Any<String>,
        "created_by": Any<String>,
        "culture": "test",
        "description": "test",
        "email": "test@socious.io",
        "followers": 1,
        "followings": 0,
        "geoname_id": null,
        "id": Any<String>,
        "image": null,
        "impact_points": 0,
        "mission": "test",
        "mobile_country_code": null,
        "name": "test ORG",
        "other_party_id": null,
        "other_party_title": null,
        "other_party_url": null,
        "phone": "9379911",
        "search_tsv": Any<String>,
        "shortname": Any<String>,
        "social_causes": [
          "SOCIAL",
          "HEALTH",
        ],
        "status": "ACTIVE",
        "type": "COOP",
        "updated_at": Any<String>,
        "verified_impact": false,
        "wallet_address": null,
        "website": "http://test.com",
      },
      "skills": null,
      "start_at": Any<String>,
      "title": "Test",
    },
  ],
  "first_name": "test_name",
  "followers": 0,
  "followings": 2,
  "geoname_id": null,
  "id": Any<String>,
  "impact_points": 0,
  "languages": [
    {
      "id": Any<String>,
      "level": "PROFICIENT",
      "name": "EN",
    },
  ],
  "last_name": "last_name",
  "mission": null,
  "mobile_country_code": null,
  "phone": null,
  "proofspace_connect_id": null,
  "reported": false,
  "skills": null,
  "social_causes": null,
  "username": "test_username",
  "wallet_address": null,
}
`;

exports[`profile by username 2`] = `
{
  "address": null,
  "avatar": null,
  "bio": null,
  "city": null,
  "country": null,
  "cover_image": null,
  "created_at": Any<String>,
  "experiences": [
    {
      "description": "Test",
      "end_at": null,
      "id": Any<String>,
      "org": {
        "address": "address",
        "bio": "test",
        "city": "Tokyo",
        "country": "JP",
        "cover_image": null,
        "created_at": Any<String>,
        "created_by": Any<String>,
        "culture": "test",
        "description": "test",
        "email": "test@socious.io",
        "followers": 1,
        "followings": 0,
        "geoname_id": null,
        "id": Any<String>,
        "image": null,
        "impact_points": 0,
        "mission": "test",
        "mobile_country_code": null,
        "name": "test ORG",
        "other_party_id": null,
        "other_party_title": null,
        "other_party_url": null,
        "phone": "9379911",
        "search_tsv": Any<String>,
        "shortname": Any<String>,
        "social_causes": [
          "SOCIAL",
          "HEALTH",
        ],
        "status": "ACTIVE",
        "type": "COOP",
        "updated_at": Any<String>,
        "verified_impact": false,
        "wallet_address": null,
        "website": "http://test.com",
      },
      "skills": null,
      "start_at": Any<String>,
      "title": "Test",
    },
  ],
  "first_name": "test_name_2",
  "followers": 0,
  "followings": 0,
  "geoname_id": null,
  "id": Any<String>,
  "impact_points": 0,
  "languages": [
    {
      "id": Any<String>,
      "level": "PROFICIENT",
      "name": "EN",
    },
  ],
  "last_name": "last_name_2",
  "mission": null,
  "mobile_country_code": null,
  "phone": null,
  "proofspace_connect_id": null,
  "reported": false,
  "skills": null,
  "social_causes": null,
  "username": "test_username_2",
  "wallet_address": null,
}
`;

exports[`register 1`] = `
{
  "error": ""email" must be a valid email",
}
`;

exports[`update experience 1`] = `
{
  "created_at": Any<String>,
  "description": "Test",
  "end_at": null,
  "id": Any<String>,
  "org_id": Any<String>,
  "skills": null,
  "start_at": Any<String>,
  "title": "Test",
  "user_id": Any<String>,
}
`;

exports[`update experience 2`] = `
{
  "created_at": Any<String>,
  "description": "Test",
  "end_at": null,
  "id": Any<String>,
  "org_id": Any<String>,
  "skills": null,
  "start_at": Any<String>,
  "title": "Test",
  "user_id": Any<String>,
}
`;

exports[`update language 1`] = `
{
  "created_at": Any<String>,
  "id": Any<String>,
  "level": "PROFICIENT",
  "name": "EN",
  "user_id": Any<String>,
}
`;

exports[`update language 2`] = `
{
  "created_at": Any<String>,
  "id": Any<String>,
  "level": "PROFICIENT",
  "name": "EN",
  "user_id": Any<String>,
}
`;

exports[`update profile 1`] = `
{
  "address": null,
  "avatar": null,
  "bio": "TEST",
  "city": null,
  "country": null,
  "cover_image": null,
  "created_at": Any<String>,
  "experiences": [
    {
      "description": "Test",
      "end_at": null,
      "id": Any<String>,
      "org": {
        "address": "address",
        "bio": "test",
        "city": "Tokyo",
        "country": "JP",
        "cover_image": null,
        "created_at": Any<String>,
        "created_by": Any<String>,
        "culture": "test",
        "description": "test",
        "email": "test@socious.io",
        "followers": 1,
        "followings": Any<Number>,
        "geoname_id": null,
        "id": Any<String>,
        "image": null,
        "impact_points": 0,
        "mission": "test",
        "mobile_country_code": null,
        "name": "test ORG",
        "other_party_id": null,
        "other_party_title": null,
        "other_party_url": null,
        "phone": "9379911",
        "search_tsv": Any<String>,
        "shortname": Any<String>,
        "social_causes": [
          "SOCIAL",
          "HEALTH",
        ],
        "status": "ACTIVE",
        "type": "COOP",
        "updated_at": Any<String>,
        "verified_impact": false,
        "wallet_address": null,
        "website": "http://test.com",
      },
      "skills": null,
      "start_at": "2022-10-16T13:32:30.211",
      "title": "Test",
    },
  ],
  "first_name": "test_name",
  "followers": 0,
  "followings": 2,
  "geoname_id": null,
  "id": Any<String>,
  "impact_points": 0,
  "languages": [
    {
      "id": Any<String>,
      "level": "PROFICIENT",
      "name": "EN",
    },
  ],
  "last_name": "last_name",
  "mission": "TEST",
  "mobile_country_code": "+98",
  "phone": "9999999999",
  "proofspace_connect_id": null,
  "reported": false,
  "skills": [],
  "social_causes": null,
  "username": "test_username",
  "wallet_address": null,
}
`;

exports[`update profile 2`] = `
{
  "error": "duplicate key value violates unique constraint "idx_phone_country_code"",
}
`;
